<resources>
    <string name="app_name">PFI</string>

    <string name="egg_pudding_name">Egg Pudding</string>
    <string name="egg_pudding_description">Made by cooking eggs and milk in a special mold, its soft texture melts in your mouth.</string>
    <string name="egg_pudding_price" translatable="false">20 💎</string>
    <string name="egg_pudding_hearts" translatable="false">❤❤❤❤❤❤</string>

    <string name="egg_tart_name">Egg Tart</string>
    <string name="egg_tart_description">You\'ll know this simple dessert is done baking when it smells just delightful.</string>
    <string name="egg_tart_price" translatable="false">30 💎</string>
    <string name="egg_tart_hearts" translatable="false">❤❤❤❤</string>

    <string name="carrot_stew_name">Carrot Stew</string>
    <string name="carrot_stew_description">This simple stew sat simmering for a long time to bring out the sweetness of the carrots.</string>
    <string name="carrot_stew_price" translatable="false">70 💎</string>
    <string name="carrot_stew_hearts" translatable="false">❤❤❤❤❤❤❤❤❤❤❤</string>

    <string name="creamy_heart_soup_name">Creamy Heart Soup</string>
    <string name="creamy_heart_soup_description">Enjoying this sweet soup with another person will bring you both closer together.</string>
    <string name="creamy_heart_soup_price" translatable="false">70 💎</string>
    <string name="creamy_heart_soup_hearts" translatable="false">❤❤❤❤❤❤❤❤❤❤❤</string>

    <string name="creamy_meat_soup_name">Creamy Meat Soup</string>
    <string name="creamy_meat_soup_description">This nutritious soup contains serious portions of lightly-braised meat and many vegetables.</string>
    <string name="creamy_meat_soup_price" translatable="false">60 💎</string>
    <string name="creamy_meat_soup_hearts" translatable="false">❤❤❤❤❤❤</string>

    <string name="gourmet_poultry_name">Gourmet Poultry Pilaf</string>
    <string name="gourmet_poultry_description">Made with the highest-quality poultry, every bite of this pilaf floods your mouth with flavour.</string>
    <string name="gourmet_poultry_price" translatable="false">20 💎</string>
    <string name="gourmet_poultry_hearts" translatable="false">❤❤</string>

    <string name="hot_pot_name">Deya Hot Pot</string>
    <string name="hot_pot_description">A hot-pot dish made from thoroughly stewed local fish. A favourite of visitors to Deya Village.</string>
    <string name="hot_pot_price" translatable="false">40 💎</string>
    <string name="hot_pot_hearts" translatable="false">❤❤❤❤❤❤❤❤</string>

    <string name="omelet_name">Omelet</string>
    <string name="omelet_description">This simple dish is common all over Hyrule. Simply fry an egg until its nice and plump.</string>
    <string name="omelet_price" translatable="false">20 💎</string>
    <string name="omelet_hearts" translatable="false">❤❤❤</string>

    <string name="pepper_steak_name">Pepper Steak</string>
    <string name="pepper_steak_description">The meat has been cooked in crushed peppers to accent its natural taste.</string>
    <string name="pepper_steak_price" translatable="false">40 💎</string>
    <string name="pepper_steak_hearts" translatable="false">❤❤❤❤</string>

    <string name="pumpkin_stew_name">Pumpkin Stew</string>
    <string name="pumpkin_stew_description">The meat has been cooked in crushed peppers to accent its natural taste.</string>
    <string name="pumpkin_stew_price" translatable="false">40 💎</string>
    <string name="pumpkin_stew_hearts" translatable="false">❤❤❤❤</string>

    <string name="salt_grilled_crab_name">Salt Grilled Crab</string>
    <string name="salt_grilled_crab_description">Nine out of ten fisherman agree: crab is best enjoyed grilled and with just a bit of salt.</string>
    <string name="salt_grilled_crab_price" translatable="false">80 💎</string>
    <string name="salt_grilled_crab_hearts" translatable="false">❤❤❤❤❤❤❤❤❤❤❤❤</string>

    <string name="seafood_rice_balls_name">Seafood Rice Balls</string>
    <string name="seafood_rice_balls_description">Stuffed with aromatic seafood, the flavor can vary by ingredients but never disappoints.</string>
    <string name="seafood_rice_balls_price" translatable="false">40 💎</string>
    <string name="seafood_rice_balls_hearts" translatable="false">❤❤❤❤❤❤❤</string>

    <string name="vegetable_risotto_name">Vegetable Risotto</string>
    <string name="vegetable_risotto_description">The sweetness of the ingredients give this risotto a mild flavor.</string>
    <string name="vegetable_risotto_price" translatable="false">40 💎</string>
    <string name="vegetable_risotto_hearts" translatable="false">❤❤❤</string>

    <string name="meat_pie_name">Meat Pie</string>
    <string name="meat_pie_description">You\'ll need an extra napkin to deal with this juicy pie of perfectly baked minced meat.</string>
    <string name="meat_pie_price" translatable="false">40 💎</string>
    <string name="meat_pie_hearts" translatable="false">❤❤❤❤❤❤</string>

    <string name="steamed_fish_name">Steamed Fish</string>
    <string name="steamed_fish_description">A refined dish made by wrapping a fresh fish in fragrant wild greens and cooking it.</string>
    <string name="steamed_fish_price" translatable="false">40 💎</string>
    <string name="steamed_fish_hearts" translatable="false">❤❤❤❤❤❤❤</string>

    <string name="payCart">Pay cart</string>
    <string name="msg_added_to_cart">Added to cart</string>
    <string name="login_nom">Enter your name</string>
    <string name="login_pass">Enter password</string>
    <string name="nom_magasin">General Shoppe</string>
    <string name="bouton_login">Login</string>
    <string name="btnBack">Back</string>
    <string name="btnAddCart">Add to cart</string>
    <string name="erreur_login">Please fill all fields</string>
    <string name="btnShoppingCart">Go to checkout</string>
    <string name="message_payé">Order placed!</string>
    <string name="message_merci">Thank you </string>
    <string name="btnquit">Quit</string>
    <string name="total_price">Total price:</string>
</resources>