<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="produit"
            type="com.example.pfi.Produit"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E3C1C1"
        android:backgroundTint="#C6D7BE"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="286dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:fontFamily="@font/zelda_font"
            android:gravity="center"
            android:shadowColor="#254310"
            android:shadowRadius="2"
            android:text="@{produit.Nom}"
            android:textColor="#3E3E3E"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:fontFamily="@font/zelda_font"
            android:gravity="center"
            android:shadowColor="#254310"
            android:shadowRadius="2"
            android:text="@string/egg_pudding_price"
            android:textColor="#3E3E3E"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:fontFamily="@font/zelda_font"
            android:gravity="center"
            android:shadowColor="#264510"
            android:shadowRadius="2"
            android:text="@string/egg_pudding_hearts"
            android:textColor="#3E3E3E"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="132dp"
            android:fontFamily="@font/zelda_font"
            android:gravity="center"
            android:shadowColor="#254310"
            android:shadowRadius="2"
            android:text="@string/egg_pudding_description"
            android:textColor="#3E3E3E"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#00D9E6D2"
                android:fontFamily="@font/zelda_font"
                android:text="@string/btnBack" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="71dp"
                android:layout_weight="1"
                android:backgroundTint="#A96363"
                android:fontFamily="@font/zelda_font"
                android:text="@string/btnAddCart" />
        </LinearLayout>

    </LinearLayout>

</layout>